manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: kdeit/otus-server
        ports:
        - containerPort: 8000
          name: server-port
