manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
